# creative-loop-engineering

./: BOOTSTRAP.md  CODEX-S1.md  CODEX-S2.md  CODEX-SPLIT1.md  CODEX-SPLIT2.md  CODEX-TASK.md  CODEX-V3.md  HEARTBEAT.md  IDENTITY.md  TOOLS.md  USER.md  app.js  comment_block.txt  index.html  index.html.backup  index.html.v1.bak  index.html.v2-only.html  new-setup-guide.md  ralphton.skill  styles.css  team-ralphton-SKILL.md  test-file.txt
.github/: team-memory-members.yml
.openclaw/: workspace-state.json
docs/: CLE-IMPROVEMENT-PLAN.md  CLE-PERFORMANCE-CORE.md  CLE-POLLER-V3.md  PRD-multiuser-ui.md
memory/: 2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md
projects/swarm-mind/: .env  .env.example  PRD.md  README.md  pyproject.toml  requirements.txt
projects/swarm-mind/src/: __init__.py  cli.py  config.py  main.py
projects/swarm-mind/src/agents/: __init__.py  base.py  profiles.py
projects/swarm-mind/src/core/: knowledge_graph.py  orchestrator.py  seed_parser.py  simulation.py
projects/swarm-mind/src/llm/: prompts.py  provider.py
projects/swarm-mind/src/memory/: __init__.py
projects/swarm-mind/src/report/: analyzer.py  generator.py
projects/swarm-mind/src/swarm_mind/: __init__.py  cli.py  config.py  main.py
projects/swarm-mind/src/swarm_mind/agents/: __init__.py  base.py  profiles.py
projects/swarm-mind/src/swarm_mind/core/: __init__.py  knowledge_graph.py  orchestrator.py  seed_parser.py  simulation.py
projects/swarm-mind/src/swarm_mind/report/: __init__.py  analyzer.py  generator.py
scripts/: cle-parse.sh  (+1 more)
(+137 files in other folders)
